# neo-shell

./: .gitignore  .gitmodules  .qmlls.ini  Cargo.toml  README.md  greeter.qml  quickshell.json  settings.json  shell.qml  test.qml
Common/: Effects.qml  Paths.qml  Settings.qml  Utils.qml  fzf.js
Components/: AppIcon.qml  Button.qml  CacheImage.qml  Loading.qml  QuickToggle.qml  RevealItems.qml  Slider.qml  StyledText.qml  TextField.qml  Toggle.qml
Greetd/: neoshell-greeter.service  neoshell-greeter.toml  niri-greeter.kdl
Helpers/: IconCategorizer.js  QtObj2Js.js  fzf.js
Matugen/config/: neoshell.toml
Matugen/templates/: niri-colors.kdl  quickshell.json
Modals/: OSD.qml  Polkit.qml  PowerMenu.qml  VolumeOSD.qml  WifiModal.qml
Modules/: Wallpaper.qml
Modules/Bar/: Apps.qml  BackgroundApps.qml  Bar.qml  Battery.qml  Clock.qml  ControlCenter.qml  QuickControls.qml  SystemTray.qml  ToolTip.qml  qmldir  (+1 more)
Services/: AppAudioService.qml  AppService.qml  AudioService.qml  BatteryService.qml  BluetoothService.qml  BrightnessService.qml  CompositorService.qml  IPCService.qml  MediaService.qml  NetworkService.qml  NiriService.qml  PolkitService.qml  PowerMenuService.qml  PowerProfileService.qml  ProgramCheckerService.qml  SessionService.qml  Theme.qml
Widgets/: AppIcon.qml  Battery.qml  Button.qml  CacheImage.qml  Clock.qml  HelpInfo.qml  InnerCurvedShape.qml  InnerRadiusRect.qml  InputField.qml  LineProgress.qml  Loading.qml  MaterialShape.qml  Popout.qml  QuickToggle.qml  RevealItems.qml  Slider.qml  StyledText.qml  TextField.qml  WavyCircle.qml
core/: Cargo.toml
(+35 files in other folders)
