[package]
name = "neoshell"
version = "2.0.0"
edition = "2024"

[dependencies]
calloop = "0.14.4"
freetype = "0.7.2"
image = "0.25.10"
parley = "0.10.0"
raw-window-handle = "0.6.2"
resvg = "0.47.0"
smithay-client-toolkit = "0.20.0"
vello = "0.9.0"
wayland-client = "0.31.14"
wayland-protocols = "0.32.12"
wayland-protocols-wlr = "0.3.12"
wgpu = "29.0.3"
xkbcommon = "0.9.0"
